k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-management
  namespace: dev
spec:
  template:
    metadata:
      name: organization-management
      namespace: dev
      labels:
        app: organization-management-backend
    spec:
      serviceAccountName: org-mngmnt-rest
      containers:
        - name: organization-management-backend
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          image: orgmngmnt:v1.0.50
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
  selector:
    matchLabels:
      app: organization-management-backend
