k8s/postgres-ssh-tunnel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres-ssh-tunnel
  name: postgres-ssh-tunnel
  namespace: postgres-ssh
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: postgres-ssh-tunnel
  template:
    metadata:
      labels:
        app: postgres-ssh-tunnel
    spec:
      containers:
        - name: autossh-postgres
          imagePullPolicy: Always
          image: nomulex/autossh:latest
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: ssh-key-path
              mountPath: /ssh/private-key
              subPath: private-key
              readOnly: true
      volumes:
        - name: ssh-key-path
          secret:
            secretName: pg-ssh-keys
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
