k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: organization-management
  namespace: dev
spec:
  selector:
    app: organization-management-backend
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: LoadBalancer
