k8s/postgres-ssh-tunnel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres-ssh
spec:
  selector:
    app: postgres-ssh-tunnel
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
