k8s/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: zipkin
spec:
  type: NodePort
  ports:
    - name: http
      port: 9411
      targetPort: 9411
  selector:
    app: zipkin
